# Financial-Market-Analyzer

./: .gitignore  README.md  docker-compose.yml  start.cmd  start.sh  ver1.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/routers/: market.py  news.py  report.py
backend/app/services/: alphavantage.py  analytics.py  market_overview.py  pdf_report.py
backend/app/utils/: rate_limiter.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: api-utils.ts  globals.css  layout.tsx  page.tsx
frontend/app/components/: GlassCard.tsx  LineChartCard.tsx  Metric.tsx  SentimentBar.tsx
