[project]
name = "fin-market-analyzer-backend"
version = "0.1.0"
description = "FastAPI backend for market data + news sentiment via Alpha Vantage"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "pydantic>=2.5",
  "pydantic-settings>=2.2",
  "python-dateutil>=2.9",
  "cachetools>=5.3",
  "tenacity>=8.2",
  "orjson>=3.10",
  "reportlab>=4.0",
]
